Bolded main headers

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 		</section>
 		<section id="home">
 			<div class="content">
-                <h1>Family Owned Store</h1>
+                <h1><strong> Family Owned Store</strong></h1>
                 <h2>Service with a smile! 
                     <br> 
                     Lowest prices in the area!</h2>
 				<h2>477-h south street
                         Front Royal, Virginia</h2>
 				
-				<h2><a href="tel:1-540-622-6845">(540) 622-6845</a><br> Business Hours:</h2>
+				<h2><a href="tel:1-540-622-6845">(540) 622-6845</a><br><br> <strong>Business Hours:</strong></h2>
 			</div>
 			<table class="table table-bordered border rounded shadow">
 				<thead class="thead-light">
