Changed best prices to best bargains

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h1><strong> Family Owned Store</strong></h1>
                 <h2>Service with a smile! 
                     <br> 
-                    Lowest prices in the area!</h2>
+                    Best bargains in the area!</h2>
 				<h2>477-h south street
                         Front Royal, Virginia</h2>
 				
